--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "as-regex",
-  "version": "0.0.1",
+  "name": "assemblyscript-regex",
+  "version": "0.1.0",
   "description": "A regex engine built with AssemblyScript",
   "main": "index.js",
   "scripts": {
@@ -11,18 +11,18 @@
     "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized",
     "tsrun": "ts-node ts/index.ts"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "colin.eberhardt@gmail.com",
+  "license": "MIT",
   "devDependencies": {
     "@types/node": "^14.14.13",
     "assemblyscript": "0.17.5",
     "jest": "^26.6.3",
     "jest-summary-reporter": "0.0.2",
     "text-encoding": "^0.7.0",
-    "ts-node": "^9.1.1"
-  },
-  "dependencies": {
+    "ts-node": "^9.1.1",
     "@assemblyscript/loader": "^0.17.5",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
   }
 }
