--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A regex engine built with AssemblyScript",
   "main": "index.js",
   "scripts": {
-    "test": "npm run asbuild:untouched && jest test/index.test.js",
+    "test": "npm run asbuild:untouched && npm run prettier:check && jest test/index.test.js",
     "test:suite": "npm run asbuild:untouched && jest test/data.test.js --reporter=jest-summary-reporter",
+    "prettier:check": "prettier --check .",
+    "prettier:write": "prettier --write .",
     "asbuild:untouched": "asc assembly/index.ts --target debug",
     "asbuild:optimized": "asc assembly/index.ts --target release",
     "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized",
@@ -14,13 +16,14 @@
   "author": "colin.eberhardt@gmail.com",
   "license": "MIT",
   "devDependencies": {
+    "@assemblyscript/loader": "^0.17.5",
     "@types/node": "^14.14.13",
     "assemblyscript": "0.17.5",
     "jest": "^26.6.3",
     "jest-summary-reporter": "0.0.2",
+    "prettier": "^2.2.1",
     "text-encoding": "^0.7.0",
     "ts-node": "^9.1.1",
-    "@assemblyscript/loader": "^0.17.5",
     "typescript": "^4.1.3"
   },
   "dependencies": {}
