--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "assemblyscript-regex",
   "version": "0.1.0",
   "description": "A regex engine built with AssemblyScript",
-  "main": "index.js",
+  "main": "assembly/index.ts",
   "scripts": {
     "test": "npm run asbuild:untouched && npm run prettier:check && jest __tests__",
     "test:suite": "npm run asbuild:untouched && jest __spec_tests__ --reporter=jest-summary-reporter",
