chore: add as-pect tests and asbuild
also fixed virtual method issue I found.

--- a/asconfig.json
+++ b/asconfig.json
@@ -14,7 +14,12 @@
       "shrinkLevel": 1,
       "converge": false,
       "noAssert": false
+    },
+    "test": {
+      "debug": true
     }
   },
-  "options": {}
+  "options": {
+    "transform": ["visitor-as/dist/examples/includeBytesTransform"]
+  }
 }
