--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "test": "npm run asbuild:untouched && npm run prettier:check && jest __tests__",
     "test:suite": "npm run asbuild:untouched && jest __spec_tests__ --reporter=jest-summary-reporter",
-    "jest": "jest __tests__",
+    "jest": "jest __tests__ --testPathIgnorePatterns assembly/*",
+    "asp": "asp --verbose",
+    "asp:ci": "asp",
     "prettier:check": "prettier --check .",
     "prettier:write": "prettier --write .",
-    "asbuild:untouched": "asc assembly/index.ts --target debug",
-    "asbuild:optimized": "asc assembly/index.ts --target release",
+    "asbuild:untouched": "asb --target debug",
+    "asbuild:optimized": "asb",
     "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized",
     "tsrun": "ts-node ts/index.ts",
     "benchmark": "node benchmark/benchmark.js"
@@ -18,8 +20,10 @@
   "author": "colin.eberhardt@gmail.com",
   "license": "MIT",
   "devDependencies": {
+    "@as-pect/cli": "^5.0.1",
     "@assemblyscript/loader": "^0.17.5",
     "@types/node": "^14.14.13",
+    "asbuild": "0.0.10",
     "assemblyscript": "0.17.5",
     "benchmark": "^2.1.4",
     "jest": "^26.6.3",
@@ -27,7 +31,8 @@
     "prettier": "^2.2.1",
     "text-encoding": "^0.7.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "visitor-as": "^0.3.2"
   },
   "dependencies": {}
 }
