--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A regex engine built with AssemblyScript",
   "ascMain": "assembly/index.ts",
   "scripts": {
-    "test": "npm run asbuild:untouched && npm run test:generate && npm run prettier:check && jest __tests__ --reporter=jest-summary-reporter",
+    "test": "npm run asbuild:untouched && npm run test:generate && npm run prettier:check && npm run test:jest && npm run benchmark",
     "test:generate": "node __spec_tests__/test-generator.js",
-    "jest": "jest __tests__",
+    "test:jest": "jest __tests__ --reporter=jest-summary-reporter",
     "prettier:check": "prettier --check .",
     "prettier:write": "prettier --write .",
     "asbuild:untouched": "asc assembly/index.ts --target debug",
