--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "author": "colin.eberhardt@gmail.com",
   "license": "MIT",
   "devDependencies": {
-    "@assemblyscript/loader": "^0.17.5",
+    "@assemblyscript/loader": "^0.18.0",
     "@types/node": "^14.14.13",
-    "assemblyscript": "0.17.5",
+    "assemblyscript": "^0.18.0",
     "benchmark": "^2.1.4",
     "jest": "^26.6.3",
     "jest-summary-reporter": "0.0.2",
