--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "A regex engine built with AssemblyScript",
   "ascMain": "assembly/index.ts",
   "scripts": {
-    "test": "npm run asbuild:untouched && npm run prettier:check && jest __tests__",
-    "test:suite": "npm run asbuild:untouched && jest __spec_tests__ --reporter=jest-summary-reporter",
-    "jest": "jest __tests__ --testPathIgnorePatterns assembly/*",
+    "test": "npm run asbuild:untouched && npm run eslint && npm run asp",
+    "test:generate": "node spec/test-generator.js",
     "asp": "asp --verbose",
     "asp:ci": "asp",
-    "prettier:check": "npm run eslint",
-    "prettier:write": "npm run eslint -- --fix ",
+    "eslint:write": "npm run eslint -- --fix ",
     "asbuild:untouched": "asb --target debug",
     "asbuild:optimized": "asb",
     "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized",
@@ -30,18 +28,15 @@
     "assemblyscript": "0.17.5",
     "benchmark": "^2.1.4",
     "eslint": "^7.18.0",
-    "jest": "^26.6.3",
-    "jest-summary-reporter": "0.0.2",
+    "husky": "^4.2.5",
+    "prettier": "^2.2.1",
     "text-encoding": "^0.7.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
-    "visitor-as": "^0.3.2",
-    "husky": "^4.2.5"
+    "typescript": "^4.1.3"
   },
   "husky": {
     "hooks": {
       "pre-commit": "npm run prettier:check || (yarn prettier:fix && exit 1)"
     }
-  },
-  "dependencies": {}
+  }
 }
