--- a/asconfig.json
+++ b/asconfig.json
@@ -3,15 +3,17 @@
     "debug": {
       "binaryFile": "build/untouched.wasm",
       "textFile": "build/untouched.wat",
+      "runtime": "stub",
       "sourceMap": true,
       "debug": true
     },
     "release": {
       "binaryFile": "build/optimized.wasm",
       "textFile": "build/optimized.wat",
+      "runtime": "stub",
       "sourceMap": true,
       "optimizeLevel": 3,
-      "shrinkLevel": 1,
+      "shrinkLevel": 0,
       "converge": false,
       "noAssert": false
     }
