--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-node_modules
-build
+node_modules/
+build/
+.history
+.vscode
+.idea
+npm-debug.*
 assembly/__tests__/index.spec.wat
 assembly/__tests__/spec.spec.wat
