--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^7.18.0",
     "husky": "^4.2.5",
     "prettier": "^2.2.1",
+    "semantic-release": "^17.3.7",
     "text-encoding": "^0.7.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
