--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   "author": "colin.eberhardt@gmail.com",
   "license": "MIT",
   "devDependencies": {
-    "@as-pect/cli": "^5.0.1",
-    "@assemblyscript/loader": "^0.17.5",
+    "@as-pect/cli": "^6.0.0",
+    "@assemblyscript/loader": "^0.18.0",
     "@types/node": "^14.14.13",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "asbuild": "0.0.10",
-    "assemblyscript": "0.17.5",
+    "assemblyscript": "^0.18.0",
     "benchmark": "^2.1.4",
     "eslint": "^7.18.0",
     "husky": "^4.2.5",
