--- a/asconfig.json
+++ b/asconfig.json
@@ -11,9 +11,9 @@
       "textFile": "build/optimized.wat",
       "sourceMap": true,
       "optimizeLevel": 3,
-      "shrinkLevel": 1,
-      "converge": false,
-      "noAssert": false
+      "shrinkLevel": 0,
+      "converge": true,
+      "noAssert": true
     },
     "test": {
       "debug": true
