--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 15
       - run: npm ci
-      - run: npm run asbuild:untouched
+      - run: npm run asbuild
       # Run benchmark with `go test -bench` and stores the output to a file
       - name: Run benchmark
         run: npm run benchmark | tee benchmark/output.txt
