chore: removed asbuild

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "prettier": "prettier --check .",
     "prettier:write": "prettier --write .",
     "eslint:write": "npm run eslint -- --fix ",
-    "asbuild:untouched": "asb --target debug",
-    "asbuild:optimized": "asb --exportRuntime",
+    "asbuild:untouched": "asc assembly/index.ts --target debug",
+    "asbuild:optimized": "asc assembly/index.ts --target release",
     "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized",
     "tsrun": "ts-node ts/index.ts",
     "benchmark": "node benchmark/benchmark.js",
@@ -26,7 +26,6 @@
     "@types/node": "^14.14.13",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
-    "asbuild": "0.0.10",
     "assemblyscript": "^0.18.0",
     "benchmark": "^2.1.4",
     "eslint": "^7.18.0",
