chore (perf): remove sourcemaps from release build

--- a/asconfig.json
+++ b/asconfig.json
@@ -9,7 +9,7 @@
     "release": {
       "binaryFile": "build/optimized.wasm",
       "textFile": "build/optimized.wat",
-      "sourceMap": true,
+      "sourceMap": false,
       "optimizeLevel": 3,
       "shrinkLevel": 0,
       "converge": true,
