--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "author": "colin.eberhardt@gmail.com",
   "license": "MIT",
   "devDependencies": {
-    "@as-pect/cli": "^6.0.0",
+    "@as-pect/cli": "^6.1.1",
+    "@ason/assembly": "0.0.4",
     "@assemblyscript/loader": "^0.18.0",
     "@types/node": "^14.14.13",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
