--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   },
   "author": "colin.eberhardt@gmail.com",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com:ColinEberhardt/assemblyscript-regex"
+  },
   "devDependencies": {
     "@as-pect/cli": "^6.0.0",
     "@assemblyscript/loader": "^0.18.0",
