chore: fixed malformed URL in repository field

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com:ColinEberhardt/assemblyscript-regex"
+    "url": "git+https://github.com/ColinEberhardt/assemblyscript-regex"
   },
   "devDependencies": {
     "@as-pect/cli": "^6.0.0",
